// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test classes Advanced tests 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": null,
          "kind": "traituse",
          "traits": Array [
            Name {
              "kind": "name",
              "name": "A",
              "resolution": "uqn",
            },
          ],
        },
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "bar",
              },
              "kind": "traitalias",
              "method": "foo",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            Name {
              "kind": "name",
              "name": "B",
              "resolution": "uqn",
            },
          ],
        },
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "leadingComments": Array [
            CommentLine {
              "kind": "commentline",
              "offset": 87,
              "value": "// comment
",
            },
            CommentBlock {
              "kind": "commentblock",
              "offset": 106,
              "value": "/* boo */",
            },
            CommentBlock {
              "kind": "commentblock",
              "offset": 124,
              "value": "/** doc
         * data
           foo
         */",
            },
          ],
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "var",
              },
              "nullable": false,
              "type": null,
              "value": Boolean {
                "kind": "boolean",
                "raw": "true",
                "value": true,
              },
            },
          ],
          "visibility": null,
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": true,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "boo",
          },
          "nullable": false,
          "type": null,
          "visibility": "private",
        },
      ],
      "extends": null,
      "implements": Array [
        Name {
          "kind": "name",
          "name": "boo",
          "resolution": "uqn",
        },
      ],
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
    Interface {
      "body": Array [
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "A",
              },
              "value": Number {
                "kind": "number",
                "value": "1.5",
              },
            },
          ],
          "kind": "classconstant",
          "leadingComments": Array [
            CommentLine {
              "kind": "commentline",
              "offset": 332,
              "value": "// some doc
",
            },
          ],
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": null,
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "offset": 375,
              "value": "/** foo */",
            },
          ],
          "name": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "nullable": false,
          "type": null,
          "visibility": "protected",
        },
      ],
      "extends": Array [
        Name {
          "kind": "name",
          "name": "something",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "boo",
      },
    },
    Trait {
      "body": Array [
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "A",
              },
              "value": Number {
                "kind": "number",
                "value": "1.5",
              },
            },
          ],
          "kind": "classconstant",
          "leadingComments": Array [
            CommentLine {
              "kind": "commentline",
              "offset": 455,
              "value": "// some doc
",
            },
          ],
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": null,
          "byref": false,
          "isAbstract": true,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "nullable": false,
          "type": null,
          "visibility": "protected",
        },
      ],
      "kind": "trait",
      "name": Identifier {
        "kind": "identifier",
        "name": "line",
      },
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "offset": 87,
      "value": "// comment
",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 106,
      "value": "/* boo */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 124,
      "value": "/** doc
         * data
           foo
         */",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 332,
      "value": "// some doc
",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 375,
      "value": "/** foo */",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 455,
      "value": "// some doc
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes Implement #183 : static keyword as identifier 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "foo",
                    },
                    "what": ParentReference {
                      "kind": "parentreference",
                      "raw": "parent",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "bar",
                    },
                    "what": SelfReference {
                      "kind": "selfreference",
                      "raw": "self",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "baz",
                    },
                    "what": StaticReference {
                      "kind": "staticreference",
                      "raw": "static",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "fooBar",
                    },
                    "what": Name {
                      "kind": "name",
                      "name": "A",
                      "resolution": "uqn",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": PropertyLookup {
                    "kind": "propertylookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "fooBaz",
                    },
                    "what": Variable {
                      "curly": false,
                      "kind": "variable",
                      "name": "this",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": true,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "test",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes Implement typed_properties_v2 / php74 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "prop",
              },
              "nullable": true,
              "type": TypeReference {
                "kind": "typereference",
                "name": "int",
                "raw": "int",
              },
              "value": NullKeyword {
                "kind": "nullkeyword",
                "raw": "null",
              },
            },
          ],
          "visibility": "public",
        },
        PropertyStatement {
          "isStatic": true,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "y",
              },
              "nullable": false,
              "type": Array [
                TypeReference {
                  "kind": "typereference",
                  "name": "float",
                  "raw": "float",
                },
                TypeReference {
                  "kind": "typereference",
                  "name": "string",
                  "raw": "string",
                },
              ],
              "value": null,
            },
          ],
          "visibility": "protected",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Test",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes Test js properties 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        PropertyStatement {
          "isStatic": true,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "constructor",
              },
              "nullable": false,
              "type": null,
              "value": null,
            },
          ],
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "constructor",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Assign {
                  "kind": "assign",
                  "left": PropertyLookup {
                    "kind": "propertylookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "constructor",
                    },
                    "what": Variable {
                      "curly": false,
                      "kind": "variable",
                      "name": "this",
                    },
                  },
                  "operator": "=",
                  "right": NullKeyword {
                    "kind": "nullkeyword",
                    "raw": "null",
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Assign {
                  "kind": "assign",
                  "left": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Variable {
                      "curly": false,
                      "kind": "variable",
                      "name": "constructor",
                    },
                    "what": SelfReference {
                      "kind": "selfreference",
                      "raw": "self",
                    },
                  },
                  "operator": "=",
                  "right": NullKeyword {
                    "kind": "nullkeyword",
                    "raw": "null",
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__proto__",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "__proto__",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes Test of silent mode 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": null,
          "kind": "traituse",
          "traits": Array [
            Name {
              "kind": "name",
              "name": "A",
              "resolution": "uqn",
            },
          ],
        },
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "foo",
              "trait": null,
              "visibility": "",
            },
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            Name {
              "kind": "name",
              "name": "B",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
  ],
  "errors": Array [
    Error {
      "expected": ";",
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected 'use' (T_USE), expecting ';' on line 4",
      "token": "'use' (T_USE)",
    },
    Error {
      "expected": Array [
        119,
        200,
      ],
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected '}' on line 4",
      "token": "'}'",
    },
    Error {
      "expected": ";",
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected '}', expecting ';' on line 4",
      "token": "'}'",
    },
    Error {
      "expected": 105,
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected ';', expecting T_STRING on line 4",
      "token": "';'",
    },
    Error {
      "expected": Array [
        119,
        200,
      ],
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected ';' on line 4",
      "token": "';'",
    },
    Error {
      "expected": "}",
      "kind": "error",
      "line": 5,
      "message": "Parse Error : syntax error, expecting '}' on line 5",
      "token": "the end of file (EOF)",
    },
  ],
  "kind": "program",
}
`;

exports[`Test classes Validate usual declarations 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "FOO",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"azerty\\"",
                "unicode": false,
                "value": "azerty",
              },
            },
          ],
          "kind": "classconstant",
          "visibility": "",
        },
        PropertyStatement {
          "isStatic": true,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "var",
              },
              "nullable": false,
              "type": null,
              "value": null,
            },
          ],
          "visibility": "public",
        },
        Method {
          "arguments": Array [
            Parameter {
              "byref": false,
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "data",
              },
              "nullable": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "array",
                "raw": "array",
              },
              "value": NullKeyword {
                "kind": "nullkeyword",
                "raw": "null",
              },
              "variadic": false,
            },
          ],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Assign {
                  "kind": "assign",
                  "left": PropertyLookup {
                    "kind": "propertylookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "data",
                    },
                    "what": Variable {
                      "curly": false,
                      "kind": "variable",
                      "name": "this",
                    },
                  },
                  "operator": "=",
                  "right": Variable {
                    "curly": false,
                    "kind": "variable",
                    "name": "data",
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "list",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"bar\\"",
                "unicode": false,
                "value": "bar",
              },
            },
          ],
          "kind": "classconstant",
          "visibility": "",
        },
        Method {
          "arguments": Array [
            Parameter {
              "byref": false,
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "foo",
              },
              "nullable": false,
              "type": null,
              "value": StaticLookup {
                "kind": "staticlookup",
                "offset": Identifier {
                  "kind": "identifier",
                  "name": "list",
                },
                "what": SelfReference {
                  "kind": "selfreference",
                  "raw": "self",
                },
              },
              "variadic": false,
            },
          ],
          "body": Block {
            "children": Array [
              Return {
                "expr": StaticLookup {
                  "kind": "staticlookup",
                  "offset": Identifier {
                    "kind": "identifier",
                    "name": "list",
                  },
                  "what": Variable {
                    "curly": false,
                    "kind": "variable",
                    "name": "this",
                  },
                },
                "kind": "return",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "new",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "foo",
              },
              "nullable": false,
              "type": null,
              "value": null,
            },
          ],
          "visibility": "protected",
        },
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "bar",
              },
              "nullable": false,
              "type": null,
              "value": null,
            },
          ],
          "visibility": "private",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "foobar",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": Name {
        "kind": "name",
        "name": "bar",
        "resolution": "uqn",
      },
      "implements": Array [
        Name {
          "kind": "name",
          "name": "bim",
          "resolution": "uqn",
        },
        Name {
          "kind": "name",
          "name": "bam",
          "resolution": "uqn",
        },
        Name {
          "kind": "name",
          "name": "boum",
          "resolution": "uqn",
        },
      ],
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": true,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitPrecedence {
              "instead": Array [
                Name {
                  "kind": "name",
                  "name": "A",
                  "resolution": "uqn",
                },
              ],
              "kind": "traitprecedence",
              "method": Identifier {
                "kind": "identifier",
                "name": "smallTalk",
              },
              "trait": Name {
                "kind": "name",
                "name": "B",
                "resolution": "uqn",
              },
            },
            TraitPrecedence {
              "instead": Array [
                Name {
                  "kind": "name",
                  "name": "B",
                  "resolution": "uqn",
                },
                Name {
                  "kind": "name",
                  "name": "C",
                  "resolution": "uqn",
                },
              ],
              "kind": "traitprecedence",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": Name {
                "kind": "name",
                "name": "A",
                "resolution": "uqn",
              },
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "talk",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": Name {
                "kind": "name",
                "name": "B",
                "resolution": "uqn",
              },
              "visibility": "public",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "talk",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": Name {
                "kind": "name",
                "name": "B",
                "resolution": "uqn",
              },
              "visibility": "protected",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "talk",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": Name {
                "kind": "name",
                "name": "B",
                "resolution": "uqn",
              },
              "visibility": "private",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "list",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "new",
              },
              "trait": Name {
                "kind": "name",
                "name": "A",
                "resolution": "uqn",
              },
              "visibility": "",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "new",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "list",
              },
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            Name {
              "kind": "name",
              "name": "A",
              "resolution": "uqn",
            },
            Name {
              "kind": "name",
              "name": "B",
              "resolution": "uqn",
            },
          ],
        },
        Method {
          "arguments": Array [],
          "body": null,
          "byref": true,
          "isAbstract": true,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "nullable": false,
          "type": Name {
            "kind": "name",
            "name": "bar",
            "resolution": "uqn",
          },
          "visibility": "protected",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": true,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "bar",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes abstract and final 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
  ],
  "errors": Array [
    Error {
      "expected": 187,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'final' (T_FINAL), expecting T_CLASS on line 1",
      "token": "'final' (T_FINAL)",
    },
  ],
  "kind": "program",
}
`;

exports[`Test classes class name as identifier 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes empty 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes final and abstract 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
  ],
  "errors": Array [
    Error {
      "expected": 187,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'abstract' (T_ABSTRACT), expecting T_CLASS on line 1",
      "token": "'abstract' (T_ABSTRACT)",
    },
  ],
  "kind": "program",
}
`;
